--- a/README
+++ b/README
@@ -1,33 +1,26 @@
-Usage Instructions
-Prepare the dockerfile Directory:
+./delete_namespaces.sh
 
-Each subdirectory under dockerfile (e.g., dockerfile/frontend) should contain:
-A Dockerfile with the build instructions.
-All required files (source code, JARs, configuration files).
-Run the Workflow:
+./restart_cluster.sh
 
-Build Docker Images Locally:
-bash
-Copy code
-make build
-Initialize and Apply Terraform:
-bash
-Copy code
-make terraform-init
-make terraform-apply
-Deploy Kubernetes Resources:
-bash
-Copy code
-make k8s-apply
-Start the Entire Flow:
-bash
-Copy code
-make start
-Stop and Clean Up:
-bash
-Copy code
-make stop
-Verify Deployment:
+run_terraform.sh
 
-Use kubectl get pods -n app to check that the pods are running.
-Use kubectl get services -n app to verify service endpoints.
+
+
+ADMINER:
+kubectl get services --all-namespaces ==> Se ia adresa CLUSTER-IP a BD si se foloseste ca server address
+MYSQL
+User admin
+Password admin
+Database: hrconnect
+
+
+AUTH:
+kubectl get svc auth-database -n auth-database
+
+BACKEND:
+kubectl get svc backend-database -n backend-database
+
+
+GENERAL OVERVIEW
+kubectl get deployments --all-namespaces
+kubectl get services --all-namespaces
